[project]
name = "cloudrun-example-api"
version = "0.1.0"
description = "sample project to learn cloudrun"
authors = [
    {name = "Jaime Villela",email = "45246367+jaime-villela@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "shell (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
